ecmascript/parser/tests/typescript-errors/class/declare-class-method/input.ts
class T {
    declare m1(): string;
}
